# markdown-link-auditor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/md_link_auditor/: __init__.py  cli.py  core.py
tests/: test_md_link_auditor.py
