[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
[project]
name = "markdown-link-auditor"
version = "0.1.0"
description = "Audit Markdown files for broken local links and missing heading anchors."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OSS Maintainer"}]
keywords = ["markdown", "links", "documentation", "ci", "developer-tools"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License"]

[project.scripts]
md-link-auditor = "md_link_auditor.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
